UF-XYZ - Upgrade to dept44 2.x
Bumps to dept44 2.x and does a tiny bit of cleaning up as well