@@ -1,33 +1,36 @@
 package apptest;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.containing;
-import static com.github.tomakehurst.wiremock.client.WireMock.postRequestedFor;
-import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
-import static com.github.tomakehurst.wiremock.client.WireMock.verify;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.http.HttpHeaders.CONTENT_TYPE;
+import static org.springframework.http.HttpMethod.GET;
+import static org.springframework.http.HttpMethod.POST;
+import static org.springframework.http.HttpStatus.BAD_REQUEST;
+import static org.springframework.http.HttpStatus.NOT_FOUND;
+import static org.springframework.http.HttpStatus.OK;
+import static org.springframework.http.HttpStatus.SERVICE_UNAVAILABLE;
+import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
+import static se.sundsvall.byggrarchiver.api.model.enums.ArchiveStatus.COMPLETED;
+import static se.sundsvall.byggrarchiver.api.model.enums.ArchiveStatus.NOT_COMPLETED;
+import static se.sundsvall.byggrarchiver.api.model.enums.BatchTrigger.SCHEDULED;
+import static se.sundsvall.byggrarchiver.testutils.TestUtil.randomInt;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Random;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.github.tomakehurst.wiremock.common.ConsoleNotifier;
 import com.github.tomakehurst.wiremock.verification.LoggedRequest;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
+import org.springframework.boot.test.context.TestConfiguration;
+import org.springframework.cloud.contract.wiremock.WireMockConfigurationCustomizer;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Import;
 
 import se.sundsvall.byggrarchiver.Application;
 import se.sundsvall.byggrarchiver.api.model.BatchJob;
-import se.sundsvall.byggrarchiver.api.model.enums.ArchiveStatus;
-import se.sundsvall.byggrarchiver.api.model.enums.BatchTrigger;
 import se.sundsvall.byggrarchiver.integration.db.ArchiveHistoryRepository;
 import se.sundsvall.byggrarchiver.integration.db.BatchHistoryRepository;
 import se.sundsvall.byggrarchiver.integration.db.model.ArchiveHistory;
@@ -35,17 +38,26 @@ import se.sundsvall.byggrarchiver.integration.db.model.BatchHistory;
 import se.sundsvall.dept44.test.AbstractAppTest;
 import se.sundsvall.dept44.test.annotation.wiremock.WireMockAppTestSuite;
 
+import configuration.TestContainersConfiguration;
+
 @WireMockAppTestSuite(
     files = "classpath:/IntegrationTest/",
     classes = Application.class
 )
+@Import({IntegrationTest.WireMockTestConfiguration.class, TestContainersConfiguration.class})
 class IntegrationTest extends AbstractAppTest {
 
-    public static final String RESPONSE_JSON = "response.json";
-     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper()
-            .enable(SerializationFeature.INDENT_OUTPUT)
-            .registerModule(new JavaTimeModule())
-            .configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false);
+    @TestConfiguration
+    static class WireMockTestConfiguration {
+
+        @Bean
+        WireMockConfigurationCustomizer optionsCustomizer() {
+            return config -> config.notifier(new ConsoleNotifier(true));
+        }
+    }
+
+    @Autowired
+    private ObjectMapper objectMapper;
 
     @Autowired
     private ArchiveHistoryRepository archiveHistoryRepository;
@@ -55,7 +67,8 @@ class IntegrationTest extends AbstractAppTest {
 
     @BeforeEach
     void beforeEach() {
-        this.wiremock.resetAll();
+        wiremock.resetAll();
+
         // Clear db between tests
         archiveHistoryRepository.deleteAll();
         batchHistoryRepository.deleteAll();
@@ -63,272 +76,273 @@ class IntegrationTest extends AbstractAppTest {
 
     // POST batch and then GET batch history and archive histories - verify that the correct is returned
     @Test
-    void testStandardPostBatchJob() throws JsonProcessingException, ClassNotFoundException {
-        BatchJob batchJob = new BatchJob();
-        batchJob.setStart(LocalDate.now().minusDays(1));
-        batchJob.setEnd(LocalDate.now().minusDays(1));
+    void test01_standardPostBatchJob() throws JsonProcessingException, ClassNotFoundException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now().minusDays(1))
+            .withEnd(LocalDate.now().minusDays(1))
+            .build();
 
         // POST batchJob
         var postBatchHistory = postBatchJob(batchJob);
 
         // GET batchJob
-        List<BatchHistory> postBatchHistoryList = Arrays.asList(
-                setupCall()
-                        .withHttpMethod(HttpMethod.GET)
-                        .withServicePath("/batch-jobs")
-                        .withExpectedResponseStatus(HttpStatus.OK)
-                        .sendRequestAndVerifyResponse()
-                        .andReturnBody(BatchHistory[].class));
+        var postBatchHistoryList = List.of(
+            setupCall()
+                .withHttpMethod(GET)
+                .withServicePath("/batch-jobs")
+                .withExpectedResponseStatus(OK)
+                .sendRequestAndVerifyResponse()
+                .andReturnBody(BatchHistory[].class));
 
-        Assertions.assertTrue(postBatchHistoryList.contains(postBatchHistory));
+        assertThat(postBatchHistoryList).contains(postBatchHistory);
 
         // GET archiveHistoryb
-        List<ArchiveHistory> getArchiveHistoryList = Arrays.asList(
-                setupCall()
-                        .withHttpMethod(HttpMethod.GET)
-                        .withServicePath("/archived/attachments?batchHistoryId=" + postBatchHistory.getId())
-                        .withExpectedResponseStatus(HttpStatus.OK)
-                        .sendRequestAndVerifyResponse()
-                        .andReturnBody(ArchiveHistory[].class));
+        var getArchiveHistoryList = List.of(
+            setupCall()
+                .withHttpMethod(GET)
+                .withServicePath("/archived/attachments?batchHistoryId=" + postBatchHistory.getId())
+                .withExpectedResponseStatus(OK)
+                .sendRequestAndVerifyResponse()
+                .andReturnBody(ArchiveHistory[].class));
 
         // GET archiveHistory with status COMPLETED
-        List<ArchiveHistory> getArchiveHistoryListCompleted = Arrays.asList(
-                setupCall()
-                        .withHttpMethod(HttpMethod.GET)
-                        .withServicePath("/archived/attachments?status=" + ArchiveStatus.COMPLETED)
-                        .withExpectedResponseStatus(HttpStatus.OK)
-                        .sendRequestAndVerifyResponse()
-                        .andReturnBody(ArchiveHistory[].class)
-        );
+        var getArchiveHistoryListCompleted = List.of(
+            setupCall()
+                .withHttpMethod(GET)
+                .withServicePath("/archived/attachments?status=" + COMPLETED)
+                .withExpectedResponseStatus(OK)
+                .sendRequestAndVerifyResponse()
+                .andReturnBody(ArchiveHistory[].class));
 
-        Assertions.assertEquals(getArchiveHistoryList, getArchiveHistoryListCompleted);
-        getArchiveHistoryList.forEach(ah -> Assertions.assertEquals(postBatchHistory, ah.getBatchHistory()));
-        getArchiveHistoryList.forEach(ah -> Assertions.assertEquals(ArchiveStatus.COMPLETED, ah.getArchiveStatus()));
-        Assertions.assertEquals(archiveHistoryRepository.getArchiveHistoriesByBatchHistoryId(postBatchHistory.getId()), getArchiveHistoryList);
+        assertThat(getArchiveHistoryList).isEqualTo(getArchiveHistoryListCompleted);
+        assertThat(getArchiveHistoryList).allSatisfy(archiveHistory -> {
+            assertThat(archiveHistory.getBatchHistory()).isEqualTo(postBatchHistory);
+            assertThat(archiveHistory.getArchiveStatus()).isEqualTo(COMPLETED);
+        });
+        assertThat(archiveHistoryRepository.getArchiveHistoriesByBatchHistoryId(postBatchHistory.getId())).isEqualTo(getArchiveHistoryList);
     }
 
     // POST batch and then GET batch history and archive histories - verify that the correct is returned
     @Test
-    void testStandardPostBatchJobZeroArchivedDocs() throws JsonProcessingException, ClassNotFoundException {
-        BatchJob batchJob = new BatchJob();
-        batchJob.setStart(LocalDate.parse("2021-01-01"));
-        batchJob.setEnd(LocalDate.parse("2021-01-01"));
+    void test02_standardPostBatchJob_zeroArchivedDocs() throws JsonProcessingException, ClassNotFoundException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.parse("2021-01-01"))
+            .withEnd(LocalDate.parse("2021-01-01"))
+            .build();
 
         // POST batchJob
         var postBatchHistory = postBatchJob(batchJob);
 
         // GET archiveHistory
         setupCall()
-                .withHttpMethod(HttpMethod.GET)
-                .withServicePath("/archived/attachments?batchHistoryId=" + postBatchHistory.getId())
-                .withExpectedResponseStatus(HttpStatus.NOT_FOUND)
-                .withExpectedResponse(RESPONSE_JSON)
-                .sendRequestAndVerifyResponse();
+            .withHttpMethod(GET)
+            .withServicePath("/archived/attachments?batchHistoryId=" + postBatchHistory.getId())
+            .withExpectedResponseStatus(NOT_FOUND)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
     }
 
     @Test
-    void testGetBatchHistoryNotFound() {
+    void test03_standardPostBatchJobNullDate() throws JsonProcessingException {
+        var batchJob = new BatchJob();
+
         setupCall()
-                .withHttpMethod(HttpMethod.GET)
-                .withServicePath("/batch-jobs")
-                .withExpectedResponseStatus(HttpStatus.NOT_FOUND)
-                .withExpectedResponse(RESPONSE_JSON)
-                .sendRequestAndVerifyResponse();
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
     }
 
+    @Test
+    void test04_getBatchHistoryNotFound() {
+        setupCall()
+            .withHttpMethod(GET)
+            .withServicePath("/batch-jobs")
+            .withExpectedResponseStatus(NOT_FOUND)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
+    }
 
     // Rerun an earlier batch
     @Test
-    void testRerun() {
-
-        BatchHistory batchHistory = new BatchHistory();
-        batchHistory.setArchiveStatus(ArchiveStatus.NOT_COMPLETED);
-        batchHistory.setStart(LocalDate.now().minusDays(2));
-        batchHistory.setEnd(LocalDate.now());
-        batchHistory.setBatchTrigger(BatchTrigger.SCHEDULED);
+    void test05_rerun() {
+        var batchHistory = BatchHistory.builder()
+            .withArchiveStatus(NOT_COMPLETED)
+            .withStart(LocalDate.now().minusDays(2))
+            .withEnd(LocalDate.now())
+            .withBatchTrigger(SCHEDULED)
+            .build();
 
         batchHistoryRepository.save(batchHistory);
 
         // POST rerun
         setupCall()
-                .withHttpMethod(HttpMethod.POST)
-                .withServicePath("/batch-jobs/" + batchHistory.getId() + "/rerun")
-                .withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .withExpectedResponseStatus(HttpStatus.OK)
-                .sendRequestAndVerifyResponse();
-
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs/" + batchHistory.getId() + "/rerun")
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(OK)
+            .sendRequestAndVerifyResponse();
     }
 
     // Rerun an earlier completed batch - verify it did not run
     @Test
-    void testRerunWithCompletedBatch() throws JsonProcessingException, ClassNotFoundException {
-
-        BatchJob batchJob = new BatchJob();
-        batchJob.setStart(LocalDate.now().minusDays(1));
-        batchJob.setEnd(LocalDate.now().minusDays(1));
+    void test06_rerunWithCompletedBatch() throws JsonProcessingException, ClassNotFoundException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now().minusDays(1))
+            .withEnd(LocalDate.now().minusDays(1))
+            .build();
 
         // POST batchJob
-        BatchHistory postBatchHistoryList = postBatchJob(batchJob);
+        var postBatchHistoryList = postBatchJob(batchJob);
 
-        Assertions.assertEquals(ArchiveStatus.COMPLETED, postBatchHistoryList.getArchiveStatus());
+        assertThat(postBatchHistoryList.getArchiveStatus()).isEqualTo(COMPLETED);
 
         // POST rerun
         setupCall()
-                .withHttpMethod(HttpMethod.POST)
-                .withServicePath("/batch-jobs/" + postBatchHistoryList.getId() + "/rerun")
-                .withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-                .withExpectedResponse(RESPONSE_JSON)
-                .sendRequestAndVerifyResponse();
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs/" + postBatchHistoryList.getId() + "/rerun")
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
     }
 
     // Rerun a non-existing batch
     @Test
-    void testRerunNonExistingBatch() {
-        int randomNumber = new Random().nextInt(999999);
+    void test07_rerunNonExistingBatch() {
+        var randomNumber = randomInt(999999);
 
         // POST rerun
         setupCall()
-                .withHttpMethod(HttpMethod.POST)
-                .withServicePath("/batch-jobs/" + randomNumber + "/rerun")
-                .withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .withExpectedResponseStatus(HttpStatus.NOT_FOUND)
-                .withExpectedResponse(RESPONSE_JSON)
-                .sendRequestAndVerifyResponse();
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs/" + randomNumber + "/rerun")
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(NOT_FOUND)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
     }
 
     // Try to run batch with start today and end tomorrow
     @Test
-    void testRunBatchForFutureDateV1() throws JsonProcessingException {
-        BatchJob batchJob = new BatchJob();
-        batchJob.setStart(LocalDate.now());
-        batchJob.setEnd(LocalDate.now().plusDays(1));
+    void test08_runBatchForFutureDateV1() throws JsonProcessingException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now())
+            .withEnd(LocalDate.now().plusDays(1))
+            .build();
 
         setupCall()
-                .withHttpMethod(HttpMethod.POST)
-                .withServicePath("/batch-jobs")
-                .withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-                .withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-                .withExpectedResponse(RESPONSE_JSON)
-                .sendRequestAndVerifyResponse();
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
     }
 
     // Try to run batch with start and end tomorrow
     @Test
-    void testRunBatchForFutureDateV2() throws JsonProcessingException {
-        BatchJob batchJob = new BatchJob();
-        batchJob.setStart(LocalDate.now().plusDays(1));
-        batchJob.setEnd(LocalDate.now().plusDays(1));
+    void test09_runBatchForFutureDateV2() throws JsonProcessingException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now().plusDays(1))
+            .withEnd(LocalDate.now().plusDays(1))
+            .build();
 
         setupCall()
-                .withHttpMethod(HttpMethod.POST)
-                .withServicePath("/batch-jobs")
-                .withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-                .withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-                .withExpectedResponse(RESPONSE_JSON)
-                .sendRequestAndVerifyResponse();
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
     }
 
     // Try to run batch with start date later than end date
     @Test
-    void testRunBatchWithEndBeforeStart() throws JsonProcessingException {
-        BatchJob batchJob = new BatchJob();
-        batchJob.setStart(LocalDate.now().minusDays(1));
-        batchJob.setEnd(LocalDate.now().minusDays(2));
+    void test10_runBatchWithEndBeforeStart() throws JsonProcessingException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now().minusDays(1))
+            .withEnd(LocalDate.now().minusDays(2))
+            .build();
 
         setupCall()
-                .withHttpMethod(HttpMethod.POST)
-                .withServicePath("/batch-jobs")
-                .withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-                .withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-                .withExpectedResponse(RESPONSE_JSON)
-                .sendRequestAndVerifyResponse();
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
     }
-
-    @Test
-    void testStandardPostBatchJobNullDate() throws JsonProcessingException {
-        BatchJob batchJob = new BatchJob();
-
-        setupCall()
-                .withHttpMethod(HttpMethod.POST)
-                .withServicePath("/batch-jobs")
-                .withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-                .withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-                .withExpectedResponse(RESPONSE_JSON)
-                .sendRequestAndVerifyResponse();
-    }
-
 
     // Test exception from GetUpdatedArenden - Should return http 500
     @Test
-    void testErrorFromGetUpdatedArenden() throws JsonProcessingException {
-        BatchJob batchJob = new BatchJob();
-        batchJob.setStart(LocalDate.parse("1999-01-01"));
-        batchJob.setEnd(LocalDate.parse("1999-01-01"));
+    void test11_errorFromGetUpdatedArenden() throws JsonProcessingException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.parse("1999-01-01"))
+            .withEnd(LocalDate.parse("1999-01-01"))
+            .build();
 
         setupCall()
-                .withHttpMethod(HttpMethod.POST)
-                .withServicePath("/batch-jobs")
-                .withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-                .withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .withExpectedResponseStatus(HttpStatus.SERVICE_UNAVAILABLE)
-                .withExpectedResponse(RESPONSE_JSON)
-                .sendRequestAndVerifyResponse();
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(SERVICE_UNAVAILABLE)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
 
         setupCall()
-                .withHttpMethod(HttpMethod.GET)
-                .withServicePath("/archived/attachments")
-                .withExpectedResponseStatus(HttpStatus.NOT_FOUND)
-                .withExpectedResponse("response2.json")
-                .sendRequestAndVerifyResponse();
+            .withHttpMethod(GET)
+            .withServicePath("/archived/attachments")
+            .withExpectedResponseStatus(NOT_FOUND)
+            .withExpectedResponse("response2.json")
+            .sendRequestAndVerifyResponse();
     }
 
     //
     @Test
-    void testMissingExtension() throws JsonProcessingException, ClassNotFoundException {
-
+    void test12_missingExtension() throws JsonProcessingException, ClassNotFoundException {
         postBatchJob(BatchJob.builder()
-                .start(LocalDate.now())
-                .end(LocalDate.now())
-                .build());
-
-        // GetUpdatedArenden returns 2 documents
-        verify(2, postRequestedFor(urlEqualTo("/archive/1.0/archive/byggr")).withRequestBody(containing("\"extension\" : \".docx\"")));
+            .withStart(LocalDate.now())
+            .withEnd(LocalDate.now())
+            .build());
     }
 
     @Test
-    void testExtensionError() throws JsonProcessingException, ClassNotFoundException {
+    void test13_extensionError() throws JsonProcessingException, ClassNotFoundException {
         postBatchJob(BatchJob.builder()
-                .start(LocalDate.now())
-                .end(LocalDate.now())
-                .build());
-
-        // Verify that email is sent
-        verify(postRequestedFor(urlEqualTo("/messaging/1.2/email")).withRequestBody(containing("Manuell hantering krävs")));
+            .withStart(LocalDate.now())
+            .withEnd(LocalDate.now())
+            .build());
     }
 
     private BatchHistory postBatchJob(BatchJob batchJob) throws JsonProcessingException, ClassNotFoundException {
         return setupCall()
-                .withHttpMethod(HttpMethod.POST)
-                .withServicePath("/batch-jobs")
-                .withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-                .withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .withExpectedResponseStatus(HttpStatus.OK)
-                .sendRequestAndVerifyResponse()
-                .andReturnBody(BatchHistory.class);
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(OK)
+            .sendRequestAndVerifyResponse()
+            .andReturnBody(BatchHistory.class);
     }
 
     @Override
-    public void verifyAllStubs() {
-        List<LoggedRequest> unmatchedRequests = this.wiremock.findAllUnmatchedRequests();
+    public boolean verifyAllStubs() {
+        var unmatchedRequests = wiremock.findAllUnmatchedRequests();
         if (!unmatchedRequests.isEmpty()) {
-            List<String> unmatchedUrls = unmatchedRequests.stream().map(LoggedRequest::getUrl).toList();
+            var unmatchedUrls = unmatchedRequests.stream()
+                .map(LoggedRequest::getUrl)
+                .toList();
+
             throw new AssertionError(String.format("The following requests was not matched: %s", unmatchedUrls));
         }
-    }
 
+        return true;
+    }
 }
